WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279124
Fix scrollIntoView(...) for SVG elements
https://bugs.webkit.org/show_bug.cgi?id=279124
Summary
Fix scrollIntoView(...) for SVG elements
Ahmad Saleem
Reported
2024-09-04 05:10:08 PDT
Hi Team, While going through WPT test failures, I came across another potential merge to fix CSSOM SVG test case. WPT Test Case:
https://wpt.fyi/results/css/cssom-view/scrollIntoView-svg-shape.html?label=experimental&label=master&aligned
WPT Live Link:
http://wpt.live/css/cssom-view/scrollIntoView-svg-shape.html
Blink Commit:
https://chromium.googlesource.com/chromium/src.git/+/5d6edb4f084778cf635640c4fafd65418af841f7
WebKit Source:
https://searchfox.org/wubkat/rev/b36cbce69fddb7da33823f316bd8ead5bebee970/Source/WebCore/rendering/RenderElement.cpp
(getTrailingCorner and getLeadingCorner) ** For leading corner *** if (isSVGRenderer()) { point = localToAbsoluteQuad(strokeBoundingBox(), UseTransforms).boundingBox().minXMinYCorner(); return true; } ** For trailing corner *** if (isSVGRenderer()) { point = localToAbsoluteQuad(strokeBoundingBox(), UseTransforms).boundingBox().maxXMaxYCorner(); return true; } ___ This compiles and it progresses all three test cases. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-04 05:10:19 PDT
<
rdar://problem/135265918
>
Ahmad Saleem
Comment 2
2024-09-04 06:07:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33118
EWS
Comment 3
2024-09-04 09:06:11 PDT
Committed
283157@main
(8a236fd73b8f): <
https://commits.webkit.org/283157@main
> Reviewed commits have been landed. Closing PR #33118 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug