Fix scrollIntoView(...) for SVG elements https://bugs.webkit.org/show_bug.cgi?id=279124 rdar://135265918

Reviewed by Simon Fraser.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Merge: https://chromium.googlesource.com/chromium/src.git/+/5d6edb4f084778cf635640c4fafd65418af841f7

This patch enables to compute the bounding rect using the stroke bounding
box to allow 'scrollIntoView' work for SVG Shapes.

* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::getLeadingCorner const):
(WebCore::RenderElement::getTrailingCorner const):
* LayoutTests/imported/w3c/web-platform-tests/css/cssom-view/scrollIntoView-svg-shape-expected.txt:

Canonical link: https://commits.webkit.org/283157@main